<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="-132dp"
        tools:layout_editor_absoluteY="44dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="18dp"
            android:text="@string/txt_setting_num_of_wifi"
            />

        <EditText
            android:id="@+id/edit_text_num_of_wifi"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_alignLeft="@+id/button_save_setting"
            android:layout_marginTop="6dp"
            android:ems="2"
            android:hint="@string/txt_setting_hint_text_num_of_wifi"
            android:inputType="number"
            android:maxLength="2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_num_of_wifi"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="140dp"
            android:text="@string/txt_setting_time_out_label" />

        <EditText
            android:id="@+id/edit_time_out"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/button_save_setting"
            android:layout_marginTop="6dp"
            android:ems="4"
            android:hint="@string/txt_setting_hint_time_out"
            android:inputType="number"
            android:maxLength="4" />

        <TextView
            android:id="@+id/roomID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_num_of_wifi"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="222dp"
            android:text="@string/txt_setting_room" />

        <EditText
            android:id="@+id/edit_roomID"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button_save_setting"
            android:layout_marginTop="6dp"
            android:ems="4"
            android:hint="@string/txt_setting_roomID"
            android:inputType="text"
            android:layout_below="@+id/roomID"
            android:maxLength="7" />

        <Button
            android:id="@+id/button_save_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_marginTop="0dp"
            android:text="@string/txt_save_label"
            android:layout_below="@+id/edit_roomID"/>




    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>