<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:background="@color/teal_200">

        <Button
            android:id="@+id/button_repeat_tutorial"
            android:layout_width="600dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_horizontal"
            android:text="@string/repeat_tutorial"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_get_wifi_tutorial"
            android:layout_width="600dp"
            android:layout_height="60dp"
            android:layout_below="@+id/button_repeat_tutorial"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_horizontal"
            android:text="@string/get_wifi_tutorial"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_setting"
            android:layout_width="600dp"
            android:layout_height="60dp"
            android:layout_below="@+id/button_get_wifi_tutorial"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_setting"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_progress"
            android:layout_width="600dp"
            android:layout_height="60dp"
            android:layout_below="@+id/button_setting"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_progress_bar"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>